tests/NormalTests/paczka1/small_fuzzy/87076952.err
Error in line 10: tBhBm S886 16,9
Error in line 15: WGIAi75 A256 38,1
